# libmad

./: CMakeLists.txt  meson.build  meson_options.txt
packaging/: makedef.py
